@@ -206,10 +206,6 @@ CFLAGS += -ffunction-sections
 CFLAGS += -fpack-struct
 CFLAGS += -fshort-enums
 CFLAGS += -fno-inline-small-functions
-CFLAGS += -fno-reorder-blocks
-CFLAGS += -fno-reorder-blocks-and-partition
-CFLAGS += -fno-reorder-functions
-CFLAGS += -fno-toplevel-reorder
 CFLAGS += -Wall
 CFLAGS += -Wstrict-prototypes
 CFLAGS += -Wundef
